--- a/restaurant-details.html
+++ b/restaurant-details.html
@@ -50,7 +50,7 @@
                             <p>Restaurant</p>
                             <h2>Restaurant Name</h2>
                         </div>
-                        <div class="col">
+                        <div class="col reviews">
                             <div class="ratings">
                                 <i class="fas fa-star active"></i>
                                 <i class="fas fa-star active"></i>
@@ -90,7 +90,7 @@
                         <hr/>
                         <div class="row">
                             <img class="quotes" src="assets/img/icons/quotes.svg" alt="Comments">
-                            <div>
+                            <div class="col">
                                 <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eveniet excepturi placeat facilis, deleniti voluptate accusamus natus aspernatur dolorem sit, cupiditate consequuntur quis? Veritatis laborum eius dolorem velit, molestias perferendis.</p>
                                 <div class="ratings">
