--- a/hotel-details.html
+++ b/hotel-details.html
@@ -38,6 +38,9 @@
                         <a href="#" onclick="showModal('login-modal');" class="login">
                             <i class="far fa-user"></i>
                         </a>
+                        <a href="#" class="btn-menu" id="btn-menu">
+                            <i class="fas fa-bars"></i>
+                        </a>
                     </nav>
                 </div>
             </div>
