--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                         <a href="#" onclick="showModal('login-modal');" class="login">
                             <i class="far fa-user"></i>
                         </a>
+                        <a href="#" class="btn-menu" id="btn-menu">
+                            <i class="fas fa-bars"></i>
+                        </a>
                     </nav>
                 </div>
             </div>
@@ -51,7 +54,7 @@
                 </div>
             </section>
 
-            <section>
+            <section class="discover">
                 <div class="container">
                     <h1 class="title-center">Discover the City</h1>
                     <div class="row">
@@ -78,7 +81,7 @@
                                 <img src="assets/img/city/hotels.jpg" class="shadow" alt="Where to stay in Vitoria">
                                 <div class="content">
                                     <p>WHERE TO STAY</p>
-                                    <h1>LOCAL FOOD</h1>
+                                    <h1>HOTELS <small>&</small> INNS</h1>
                                 </div>
                             </a>
                         </div>
@@ -120,8 +123,8 @@
                 </div>
             </section>
 
-            <section>
-                <div class="container news-list">
+            <section class="news">
+                <div class="container">
                     <h1 class="title-center">Latest Local News</h1>
                     <hr/>
                     <div class="list-items">
