--- a/places.html
+++ b/places.html
@@ -38,6 +38,9 @@
                         <a href="#" onclick="showModal('login-modal');" class="login">
                             <i class="far fa-user"></i>
                         </a>
+                        <a href="#" class="btn-menu" id="btn-menu">
+                            <i class="fas fa-bars"></i>
+                        </a>
                     </nav>
                 </div>
             </div>
@@ -52,7 +55,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="beaches">
                 <div class="container">
                     <div class="row">
                         <div class="col">
@@ -66,7 +69,7 @@
                     </div>
                 </div>
             </section>
-            <section class="bg-light">
+            <section class="parks bg-light">
                 <div class="container">
                     <div class="row">
                         <div class="col">
@@ -81,7 +84,7 @@
                 </div>
             </section>
             <section>
-                <div class="container">
+                <div class="church container">
                     <div class="row">
                         <div class="col">
                             <h2>Historic Church</h2>
