Fix html errors

--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore saepe repellat sapiente velit mollitia voluptate vel.</p>
                         </div>
                         <div class="col">
-                            <form action="" class="newsletter-form shadow">
-                                <input type="text" nam="" placeholder="Name" >
-                                <input type="text" nam="" placeholder="Email" >
+                            <form action="post" class="newsletter-form shadow">
+                                <input type="text" name="" placeholder="Name" >
+                                <input type="text" name="" placeholder="Email" >
                                 <button type="submit" class="btn btn-primary">Subscribe</button>
                             </form>
                         </div>
@@ -193,7 +193,7 @@
     <div class="modal modal-sm" id="login-modal">
         <h1>LOGIN</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <form action="">
+        <form action="post">
             <div class="row">
                 <div class="col-1">
                     <input type="text" placeholder="Username" >
