--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                         </div>
                         <div class="col">
                             <form action="post" class="newsletter-form shadow">
-                                <input type="text" name="" placeholder="Name" >
-                                <input type="text" name="" placeholder="Email" >
+                                <input type="text" name="name" placeholder="Name" >
+                                <input type="text" name="email" placeholder="Email" >
                                 <button type="submit" class="btn btn-primary">Subscribe</button>
                             </form>
                         </div>
