Add header to hero section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <section class="hero">
                 <div class="container">
                     <div class="subtitle">WELCOME TO</div>
-                    <div class="title">VITORIA</div>
+                    <h2 class="title">VITORIA</h2>
                 </div>
             </section>
 
