--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
     <div class="modal modal-sm" id="login-modal">
         <h2>LOGIN</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <form action="">
+        <form action="post">
             <div class="row">
                 <div class="col-1">
                     <input type="text" placeholder="Username" >
@@ -188,7 +188,7 @@
         </button>
         <h2>CONTACT</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <form action="">
+        <form action="post">
             <div class="row">
                 <div class="col-1">
                     <input type="text" placeholder="Full Name" >
