--- a/restaurants.html
+++ b/restaurants.html
@@ -232,7 +232,7 @@
     <div class="modal modal-sm" id="login-modal">
         <h2>LOGIN</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <form action="">
+        <form action="post">
             <div class="row">
                 <div class="col-1">
                     <input type="text" placeholder="Username" >
