--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h1 class="title-center">Discover the City</h1>
                     <div class="row">
                         <div class="col-3">
-                            <a href="" class="place-img">
+                            <a href="places.html" class="place-img">
                                 <img src="assets/img/city/beaches.jpg" class="shadow" alt="Paradise Places in Vitoria">
                                 <div class="content">
                                     <p>PARADISE</p>
@@ -68,7 +68,7 @@
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="" class="place-img">
+                            <a href="restaurants.html" class="place-img">
                                 <img src="assets/img/city/food.jpg" class="shadow" alt="Traditional food in Vitoria">
                                 <div class="content">
                                     <p>TRADITIONAL</p>
@@ -77,7 +77,7 @@
                             </a>
                         </div>
                         <div class="col-3">
-                            <a href="" class="place-img">
+                            <a href="hotels.html" class="place-img">
                                 <img src="assets/img/city/hotels.jpg" class="shadow" alt="Where to stay in Vitoria">
                                 <div class="content">
                                     <p>WHERE TO STAY</p>
@@ -160,7 +160,10 @@
                             <form action="post" class="newsletter-form shadow">
                                 <input type="text" name="name" placeholder="Name" >
                                 <input type="text" name="email" placeholder="Email" >
-                                <button type="submit" class="btn btn-primary">Subscribe</button>
+                                <button type="submit" class="btn btn-primary">
+                                    <span class="hide-xs">Subscribe</span>
+                                    <span class="visible-xs">OK</span>
+                                </button>
                             </form>
                         </div>
                     </div>
