--- a/hotels.html
+++ b/hotels.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="navbar">
                     <a class="brand" href="index.html">
-                        <img src="assets/img/logo.png" alt="City of Vitoria">
+                        <img src="assets/img/logo.svg" alt="City of Vitoria">
                     </a>
                     <nav>
                         <ul>
